--- a/Flexbox/FlexFlow/FlexFlowPratice.html
+++ b/Flexbox/FlexFlow/FlexFlowPratice.html
@@ -11,7 +11,8 @@
             flex-flow: row nowrap;
             border: 1px solid red;
             max-width: 500px;
-            
+            padding:20px;
+
         }
         .default{
             flex-flow: row nowrap;
